# rocketapi-starter

./: Cargo.toml  README.md  Rocket.toml
src/: main.rs
src/service/: albums.rs  feature_module.rs  mod.rs
src/service/auth/: application_auth.rs  mod.rs
src/service/feature/: feature_controller.rs  feature_models.rs  feature_service.rs  mod.rs
src/static_fmod/: mod.rs
static_files/: index.html
