[package]
name = "rocketapi-starter"
version = "0.1.0"
authors = ["Adrian Pavelescu <adrian@acpgr.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0-rc.1"
sys-info = "*"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
jsonwebtoken = "5"

[dependencies.rocket_contrib]
version = "0.4.0-rc.1"